# Competitive-and-Cooperative-Evolution

simulation/: Cargo.toml  README.md  template_parameters.json
simulation/src/: brain.rs  collisionobjectdata.rs  config.rs  entity.rs  food.rs  gamestate.rs  main.rs  random_helper.rs  randomwalker.rs  record.rs  wall.rs
simulation/walls/: map1.json  map2.json  map3.json  map4.json  map5.json  map6.json  map7.json  map8.json
