[package]
name = "simulation"
version = "0.1.0"
authors = ["vkj"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
rand = "0.7.3"
ncollide2d = "0.22.0"
nalgebra = "0.20.0"
serde_json = "1.0"
csv = "1.1"
serde_derive = "1.0"
serde = "1.0"